--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -6,7 +6,7 @@
     <p [innerHTML]="selectedNetwork.networkInformation.description"></p>
   </div>
 
-  <div class="form-check">
+  <div class="form-check mb-2">
     <input class="form-check-input" type="checkbox" value="{{showLabels}}" id="showLabels"
            (click)="toggleLabels(!showLabels)">
     <label class="form-check-label" for="showLabels">
@@ -58,7 +58,8 @@
           <td>&nbsp;</td>
           <td *ngFor="let node of graphService.selectedElements.nodes">
             <a role="button" (click)="graphService.highlightByElementId(node.id)"
-            data-toggle="tooltip" placement="left" ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{node.id}}">
+               data-toggle="tooltip" placement="left"
+               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{node.id}}">
               <b>{{node.name}} ({{node.id}})</b>
             </a>
           </td>
@@ -83,7 +84,8 @@
           <td>&nbsp;</td>
           <td *ngFor="let edge of graphService.selectedElements.edges">
             <a role="button" (click)="graphService.highlightByElementId(edge.id)"
-                    data-toggle="tooltip" placement="left" ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE' | translate}} {{edge.id}}">
+               data-toggle="tooltip" placement="left"
+               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_EDGE' | translate}} {{edge.id}}">
               <b>{{edge.name}} ({{edge.id}})</b>
             </a>
           </td>
@@ -120,15 +122,24 @@
     <div class="tab-pane fade show active" id="editsNavAspectsContent" role="tabpanel"
          aria-labelledby="editsNavAspects">
 
+      <button class="btn btn-lg btn-block btn-success mt-2 mb-2" data-toggle="tooltip" placement="bottom"
+              ngbTooltip="{{'SIDEBAR_EDIT_TT_MANAGE_MAPPINGS' | translate}}"
+              [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, -1]} }]">
+        <fa-icon [icon]="" class="mr-2"></fa-icon>
+        {{'SIDEBAR_EDIT_MANAGE_MAPPINGS' | translate}}
+      </button>
+
       <h5
         *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.nodesDiscrete || selectedNetwork.mappings.nodesContinuous) && (selectedNetwork.mappings.nodesDiscrete.length > 0 || selectedNetwork.mappings.nodesContinuous.length > 0)">
         {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}
       </h5>
 
-      <table class="table table-bordered" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete && selectedNetwork.mappings.nodesDiscrete.length > 0">
+      <table class="table table-bordered"
+             *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete && selectedNetwork.mappings.nodesDiscrete.length > 0">
         <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodesDiscrete">
           <td>
-            <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nodeMap)]} }]">
+            <a role="button"
+               [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nodeMap)]} }]">
               <b>{{nodeMap.classifier}}</b>
             </a>
           </td>
@@ -165,7 +176,8 @@
         </tr>
       </table>
 
-      <ul class="list-group" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous && selectedNetwork.mappings.nodesContinuous.length > 0">
+      <ul class="list-group"
+          *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous && selectedNetwork.mappings.nodesContinuous.length > 0">
       <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous; let index = index">
         <li class="list-group-item" *ngIf="nodeMap.chartValid">
           <a role="button" (click)="displayMapping(nodeMap.chart, [], 'nc' + index)">
@@ -187,10 +199,12 @@
       <h5
         *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.edgesDiscrete || selectedNetwork.mappings.edgesContinuous) && (selectedNetwork.mappings.edgesDiscrete.length > 0 || selectedNetwork.mappings.edgesContinuous.length > 0)">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
 
-      <table class="table table-bordered" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete && selectedNetwork.mappings.edgesDiscrete.length > 0">
+      <table class="table table-bordered"
+             *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete && selectedNetwork.mappings.edgesDiscrete.length > 0">
         <tr *ngFor="let edgeMap of selectedNetwork.mappings.edgesDiscrete">
           <td>
-            <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edgeMap)]} }]">
+            <a role="button"
+               [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edgeMap)]} }]">
               <b>{{edgeMap.classifier}}</b>
             </a>
           </td>
@@ -223,7 +237,8 @@
         </tr>
       </table>
 
-      <ul class="list-group" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous && selectedNetwork.mappings.edgesContinuous.length > 0">
+      <ul class="list-group"
+          *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous && selectedNetwork.mappings.edgesContinuous.length > 0">
       <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous; let index = index">
         <li class="list-group-item" *ngIf="edgeMap.chartValid">
           <a role="button" (click)="displayMapping(edgeMap.chart, [], 'ec' + index)">
