--- a/src/app/components/main-mappings-new/main-mappings-new.component.html
+++ b/src/app/components/main-mappings-new/main-mappings-new.component.html
@@ -44,9 +44,9 @@
     <div class="tab-pane fade show" id="newNdForm" role="tabpanel" aria-labelledby="newNd"
          [ngClass]="{active: mappingsType.nd}">
       <h3>{{'MAIN_MAPPINGS_NEW_ND' | translate}}</h3>
-
       <p>{{'MAIN_MAPPINGS_NEW_INSTRUCTIONS' | translate}}</p>
 
+      <!-- ALERT: mapping already exists -->
       <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesDiscrete">
         <span *ngFor="let style of nodeMap.styleMap">
           <div class="alert alert-danger" role="alert"
@@ -65,6 +65,7 @@
         </span>
       </span>
 
+      <!-- ALERT: distribution -->
       <div class="alert alert-info" role="alert">
         <button type="button" class="btn btn-sm btn-outline-secondary mr-4" data-toggle="tooltip"
                 placement="right"
@@ -75,6 +76,7 @@
         {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
       </div>
 
+      <!-- distribution chart -->
       <div *ngIf="showDistribution" [ngStyle]="{'width.%': 100}">
         <canvas baseChart
                 [chartType]="'bar'"
@@ -83,8 +85,8 @@
         <hr>
       </div>
 
+      <!-- FORM -->
       <form *ngIf="discreteMapping">
-
         <div class="form-group row">
           <label for="ndCssProperty"
                  class="col-4 col-form-label">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
@@ -108,6 +110,7 @@
 
         <hr>
 
+        <!-- values and input fields for each value -->
         <div class="form-group row" *ngFor="let entry of discreteMapping; let index = index">
           <label for="nd{{index}}" class="col-4 col-form-label">{{entry.isHR}}</label>
           <div class="col-7">
@@ -121,6 +124,7 @@
           </span>
         </div>
 
+        <!-- SUBMIT/CLEAR/ABORT -->
         <div class="row">
           <div class="col-4">
             <button type="button" class="btn btn-block btn-outline-danger"
@@ -152,10 +156,12 @@
 
     </div>
 
+    <!-- NEW: NodesContinuous -->
     <div class="tab-pane fade show" id="newNcForm" role="tabpanel" aria-labelledby="newNc"
          [ngClass]="{active: mappingsType.nc}">
       <h3>{{'MAIN_MAPPINGS_NEW_NC' | translate}}</h3>
 
+      <!-- ALERT: mapping already exists -->
       <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous">
         <div class="alert alert-danger" role="alert"
              *ngIf="nodeMap.title[0].includes(propertyToMap.name) && nodeMap.title[1] === styleProperty">
@@ -172,6 +178,7 @@
         </div>
       </span>
 
+      <!-- ALERT: distribution -->
       <div class="alert alert-info" role="alert">
 
         <button type="button" class="btn btn-sm btn-outline-secondary mr-4" data-toggle="tooltip"
@@ -183,6 +190,7 @@
         {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
       </div>
 
+      <!-- distribution chart -->
       <div *ngIf="showDistribution" [ngStyle]="{'width.%': 100}">
         <canvas baseChart
                 [chartType]="'scatter'"
@@ -191,6 +199,7 @@
         <hr>
       </div>
 
+      <!-- ALERT: minimum und maximum (if available) -->
       <div class="alert alert-info" role="alert" *ngIf="propertyToMap.min !== null && propertyToMap.max !== null">
         <h5>{{'MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING' | translate}}</h5>
         <p>{{'MAIN_MAPPINGS_NEW_DEFAULT_HINT' | translate}}</p>
@@ -198,6 +207,7 @@
         <p>{{'MAIN_MAPPINGS_NEW_CURRENT_MAX' | translate}}: <b>{{propertyToMap.max}}</b></p>
       </div>
 
+      <!-- FORM -->
       <form *ngIf="continuousMapping">
         <div class="form-group row">
           <label for="ncCssProperty"
@@ -233,6 +243,7 @@
           </span>
         </div>
 
+        <!-- thresholds -->
         <div class="form-group row" *ngFor="let threshold of continuousThresholds; let index = index">
           <div class="col-4">
             <input type="number" class="form-control" id="ncThreshold{{index}}" name="ncThreshold{{index}}"
@@ -273,7 +284,7 @@
           </span>
         </div>
 
-        <!-- Buttons -->
+        <!-- SUBMIT/CLEAR/ABORT -->
         <div class="row">
           <div class="col-4">
             <button type="button" class="btn btn-block btn-outline-danger"
@@ -308,7 +319,9 @@
     <div class="tab-pane fade show" id="newEdForm" role="tabpanel" aria-labelledby="newEd"
          [ngClass]="{active: mappingsType.ed}">
       <h3>{{'MAIN_MAPPINGS_NEW_ED' | translate}}</h3>
+      <p>{{'MAIN_MAPPINGS_NEW_INSTRUCTIONS' | translate}}</p>
 
+      <!-- ALERT: mapping already exists -->
       <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesDiscrete">
         <span *ngFor="let style of edgeMap.styleMap">
           <div class="alert alert-danger" role="alert"
@@ -327,6 +340,7 @@
         </span>
       </span>
 
+      <!-- ALERT: distribution -->
       <div class="alert alert-info" role="alert">
         <button type="button" class="btn btn-sm btn-outline-secondary mr-4" data-toggle="tooltip"
                 placement="bottom"
@@ -337,6 +351,7 @@
         {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
       </div>
 
+      <!-- distribution chart -->
       <div *ngIf="showDistribution" [ngStyle]="{'width.%': 100}">
         <canvas baseChart [ngStyle]="{'width.%': 100}"
                 [chartType]="'bar'"
@@ -345,8 +360,8 @@
         <hr>
       </div>
 
+      <!-- FORM -->
       <form *ngIf="discreteMapping">
-
         <div class="form-group row">
           <label for="edCssProperty"
                  class="col-4 col-form-label">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
@@ -370,6 +385,7 @@
 
         <hr>
 
+        <!-- values and input fields for each value -->
         <div class="form-group row" *ngFor="let entry of discreteMapping; let index = index">
           <label for="ed{{index}}" class="col-4 col-form-label">{{entry.isHR}}</label>
           <div class="col-7">
@@ -383,6 +399,7 @@
           </span>
         </div>
 
+        <!-- SUBMIT/CLEAR/ABORT -->
         <div class="row">
           <div class="col-4">
             <button type="button" class="btn btn-block btn-outline-danger"
@@ -412,7 +429,6 @@
 
       </form>
 
-
     </div>
 
     <!-- NEW: EdgesContinuous -->
@@ -420,6 +436,7 @@
          [ngClass]="{active: mappingsType.ec}">
       <h3>{{'MAIN_MAPPINGS_NEW_EC' | translate}}</h3>
 
+      <!-- ALERT: mapping already exists -->
       <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous">
         <div class="alert alert-danger" role="alert"
              *ngIf="edgeMap.title[0].includes(propertyToMap.name) && edgeMap.title[1] === styleProperty">
@@ -436,6 +453,7 @@
         </div>
       </span>
 
+      <!-- ALERT: distribution -->
       <div class="alert alert-info" role="alert">
 
         <button type="button" class="btn btn-sm btn-outline-secondary mr-4" data-toggle="tooltip"
@@ -447,6 +465,7 @@
         {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
       </div>
 
+      <!-- distribution chart -->
       <div *ngIf="showDistribution" [ngStyle]="{'width.%': 100}">
         <canvas baseChart
                 [chartType]="'scatter'"
@@ -455,6 +474,7 @@
         <hr>
       </div>
 
+      <!-- ALERT: minimum and maximum (if available) -->
       <div class="alert alert-info" role="alert" *ngIf="propertyToMap.min !== null && propertyToMap.max !== null">
         <h5>{{'MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING' | translate}}</h5>
         <p>{{'MAIN_MAPPINGS_NEW_DEFAULT_HINT' | translate}}</p>
@@ -462,9 +482,8 @@
         <p>{{'MAIN_MAPPINGS_NEW_CURRENT_MAX' | translate}}: <b>{{propertyToMap.max}}</b></p>
       </div>
 
-
+      <!-- FORM -->
       <form *ngIf="continuousMapping">
-
         <div class="form-group row">
           <label for="ecCssProperty"
                  class="col-4 col-form-label">{{'MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL' | translate}}</label>
@@ -499,6 +518,7 @@
           </span>
         </div>
 
+        <!-- thresholds -->
         <div class="form-group row" *ngFor="let threshold of continuousThresholds; let index = index">
           <div class="col-4">
             <input type="number" class="form-control" id="ecThreshold{{index}}" name="ecThreshold{{index}}"
@@ -539,7 +559,7 @@
           </span>
         </div>
 
-        <!-- Buttons -->
+        <!-- SUBMIT/CLEAR/ABORT -->
         <div class="row">
           <div class="col-4">
             <button type="button" class="btn btn-block btn-outline-danger"
