--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -72,7 +72,8 @@
             </td>
             <td>
               <button type="button" class="btn btn-block btn-outline-danger" data-toggle="tooltip"
-                      placement="bottom" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_DELETE' | translate}}">
+                      placement="bottom" ngbTooltip="{{'MAIN_MAPPINGS_TT_SINGLE_DELETE' | translate}}"
+                      (click)="toggleSingleRemoveDialogue(map, givenMapType, style)">
                 <fa-icon [icon]="faTrash"></fa-icon>
               </button>
             </td>
@@ -96,8 +97,8 @@
 
       <div class="mt-3 mb-3" *ngIf="map && (map.classifier || map.chartValid || map.gradientValid)">
         <div>
-          <button class="btn btn-block btn-outline-danger" (click)="toggleRemoveDialogue(map, givenMapType)"
-          data-toggle="tooltip" placement="bottom" ngbTooltip="{{'MAIN_MAPPINGS_TT_DELETE' | translate}}">
+          <button class="btn btn-block btn-outline-danger" (click)="toggleGlobalRemoveDialogue(map, givenMapType)"
+                  data-toggle="tooltip" placement="bottom" ngbTooltip="{{'MAIN_MAPPINGS_TT_DELETE' | translate}}">
             <fa-icon [icon]="faTrash"></fa-icon>
             {{'MAIN_MAPPINGS_DELETE' | translate}}
           </button>
@@ -109,14 +110,16 @@
 
   <hr>
 
-  <div *ngIf="showList">
+  <!-- SHOW LIST -->
+  <div *ngIf="!showGlobalDeletionDialogue && !showSingleDeletionDialogue">
 
     <h3>{{'MAIN_MAPPINGS_TITLE_LIST' | translate}}</h3>
 
     <div class="row">
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesNodes.length > 0">
+        <table class="table table-borderless"
+               *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesNodes.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_NODES_DISCRETE' | translate}}</th>
           </thead>
@@ -169,7 +172,8 @@
 
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesEdges.length > 0">
+        <table class="table table-borderless"
+               *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesEdges.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_EDGES_DISCRETE' | translate}}</th>
           </thead>
@@ -224,7 +228,8 @@
     <div class="row">
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesNodes.length > 0">
+        <table class="table table-borderless"
+               *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesNodes.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS' | translate}}</th>
           </thead>
@@ -277,7 +282,8 @@
 
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesEdges.length > 0">
+        <table class="table table-borderless"
+               *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesEdges.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS' | translate}}</th>
           </thead>
@@ -331,7 +337,8 @@
 
   </div>
 
-  <div *ngIf="!showList">
+  <!-- SHOW GLOBAL DELETION DIALOGUE -->
+  <div *ngIf="showGlobalDeletionDialogue && !showSingleDeletionDialogue">
     <div class="alert alert-danger" role="alert">
       {{'MAIN_MAPPINGS_CONFIRM_DELETION' | translate}}
     </div>
@@ -348,7 +355,8 @@
 
       <!-- confirm -->
       <div class="col-6">
-        <button class="btn btn-block btn-outline-danger" (click)="confirmDeletion(true)">
+        <button class="btn btn-block btn-outline-danger" (click)="confirmDeletion(true, 'global')"
+                [routerLink]="['', { outlets: {primary: ['graph', selectedNetwork.id]} }]">
           <fa-icon [icon]="faCheck"></fa-icon>
           {{'MAIN_MAPPINGS_CONFIRM_DELETION_YES' | translate}}
         </button>
@@ -357,5 +365,32 @@
 
   </div>
 
+  <!-- SHOW SINGLE DELETION DIALOGUE -->
+  <div *ngIf="showSingleDeletionDialogue && !showGlobalDeletionDialogue">
+    <div class="alert alert-danger" role="alert">
+      {{'MAIN_MAPPINGS_SINGLE_CONFIRM_DELETION' | translate}}
+    </div>
+
+    <div class="row">
+
+      <!-- nevermind -->
+      <div class="col-6">
+        <button class="btn btn-block btn-outline-success" (click)="confirmDeletion(false)">
+          <fa-icon [icon]="faTimes"></fa-icon>
+          {{'MAIN_MAPPINGS_CONFIRM_DELETION_NO' | translate}}
+        </button>
+      </div>
+
+      <!-- confirm -->
+      <div class="col-6">
+        <button class="btn btn-block btn-outline-danger" (click)="confirmDeletion(true, 'single')"
+                [routerLink]="['', { outlets: {primary: ['graph', selectedNetwork.id]} }]">
+          <fa-icon [icon]="faCheck"></fa-icon>
+          {{'MAIN_MAPPINGS_CONFIRM_DELETION_YES' | translate}}
+        </button>
+      </div>
+    </div>
+
+  </div>
 
 </ng-container>
